# mydnshost-python-api

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  api.py  cli.py  mydnsapi.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  build-pr.yml  build.yml  docker-build-and-push.yml  release-on-tag.yml  test-then-build.yml
mydnshost/: api.py  cli.py
