[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "mydnshost"
dynamic = ["version", "dependencies"]
authors = [
  { name="Shane Mc Cormack", email="shanemcc@gmail.com" },
  { name="Chris Smith", email="mdh-api@chameth.com" },
]
description = "Command-line tool and API to interact with the MyDnsHost.co.uk API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: System :: Systems Administration',
    'Topic :: Utilities',
]
license = "MIT"
license-files = [
    "LICENCE",
]

[project.scripts]
mydnshost = "mydnshost.cli:main"

[project.urls]
"Homepage" = "https://github.com/mydnshost/mydnshost-python-api"
"Bug Tracker" = "https://github.com/mydnshost/mydnshost-python-api/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "mydnshost/_version.py"

[tool.hatch.build]
only-include = ["mydnshost"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["mydnshost/requirements.txt"]
